--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Airbaby Solutions, Baby",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "airbaby/favicon.ico",
       "sizes": "256x256 192x192 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "airbaby/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "airbaby/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
