--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/charts": "^7.6.2",
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@tabler/icons-react": "^3.1.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@types/node": "^20",
